samples/_failures_safe/1761304007_858547_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8dc325f.c: In function ‘main’:
./samples/SAFE/__tmp_a8dc325f.c:149:9: error: expected declaration or statement at end of input
  149 |         printf("No input provided.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_a8dc325f.c:149:9: error: expected declaration or statement at end of input
